# dredge

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Justfile  LICENSE-APACHE  README.md  RELEASE_NOTES.md  SECURITY.md  cog.toml  deny.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  rust-clippy.yml  rust.yml
docs/: changelog-v0.1.0-rc1-v0.1.0.md  changelog-v0.1.0-v0.2.0.md  changelog-v0.2.0-v1.0.0.md  changelog-v1.0.0-v1.1.0.md  release-notes-template.md
scripts/: generate-changelog.sh  make-release.sh  update-release-notes.sh
src/: api.rs  cli.rs  commands.rs  config.rs  error.rs  main.rs
src/commands/: catalog.rs  repo.rs  tags.rs  version.rs
