[package]
name = "dredge-tool"
version = "1.2.0"
edition = "2021"
authors = ["Anthony Oteri"]
description = "A command line tool for interacting with the Docker Registry API"
readme = "README.md"
repository = "https://github.com/anthonyoteri/dredge"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
keywords = [
    "docker",
    "registry",
    "cli",
]
categories = [
    "command-line-utilities",
    "api-bindings",
]


[[bin]]
path = "src/main.rs"
name = "dredge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
simple_logger = { version = "5.2", features = ["timestamps", "colors", "stderr"] }
http = "1.4"
indoc = "2.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "gzip", "multipart", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0"
toml = "1.0"
url = { version = "2.5", features = ["serde"] }
tokio = { version = "1.52", features = ["macros"] }

[dev-dependencies]
mockito = "1.7"
env_logger = "0.11"
